--- a/.github/workflows/kdevops.yml
+++ b/.github/workflows/kdevops.yml
@@ -18,6 +18,9 @@ jobs:
         run: |
           git config --global --add safe.directory '*'
 
+      - name: Set Linux kdevops development path
+        run: echo "LINUX_KDEVOPS_PATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+
       - name: Checkout kdevops
         run: |
           rm -rf kdevops
@@ -101,25 +104,24 @@ jobs:
           cd kdevops
           make journal-dump
 
+      - name: Start SSH Agent
+        if: always()  # Ensure this step runs even if previous steps failed
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
       - name: Build our kdevops archive results
         if: always() # This ensures the step runs even if previous steps failed
         run: |
           cd kdevops
           make ci-archive
 
-      - name: Find and kdevops results zip file
-        if: always() # This ensures the step runs even if previous steps failed
-        run: |
-          ZIP_FILE=$(find kdevops/archive -name "*.zip" -type f | head -n 1)
-          echo "Found zip file: $ZIP_FILE"
-          echo "KDEVOPS_ARTIFACT_PATH=$ZIP_FILE" >> $GITHUB_ENV
-
       - name: Upload our kdevops results archive
         if: always() # This ensures the step runs even if previous steps failed
         uses: actions/upload-artifact@v4
         with:
           name: kdevops-ci-results
-          path: ${{ env.KDEVOPS_ARTIFACT_PATH }}
+          path: ${{ env.LINUX_KDEVOPS_PATH }}/kdevops/archive/*.zip
           
       # Ensure make destroy always runs, even on failure
       - name: Run kdevops make destroy
