CI: leverage new metadata
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/.github/workflows/kdevops.yml
+++ b/.github/workflows/kdevops.yml
@@ -14,6 +14,14 @@ jobs:
     name: Run kdevops CI on Self-hosted Runner
     runs-on: [self-hosted, Linux, X64]
     steps:
+      - name: Set CI metadata for kdevops-results-archive
+        run: |
+          echo "$(basename ${{ github.repository }})" > ci.trigger
+          git log -1 --pretty=format:"%s" > ci.subject
+          # Start out pessimistic
+          echo "not ok" > ci.result
+          echo "Nothing to write home about." > ci.commit_extra
+
       - name: Configure git
         run: |
           git config --global --add safe.directory '*'
@@ -97,6 +105,7 @@ jobs:
         run: |
           cd kdevops
           make ci-test
+          echo "ok" > ci.result
 
       - name: Get systemd journal files
         if: always() # This ensures the step runs even if previous steps failed
@@ -122,7 +131,7 @@ jobs:
         with:
           name: kdevops-ci-results
           path: ${{ env.LINUX_KDEVOPS_PATH }}/kdevops/archive/*.zip
-          
+
       # Ensure make destroy always runs, even on failure
       - name: Run kdevops make destroy
         if: always()  # This ensures the step runs even if previous steps failed
